# hangman-solver

./: .gitignore  README.md  pyproject.toml  test.txt
hangman/: dataset.py  hangman_api_user.ipynb  model.py  ngram.py  strategy.py  trainer.py
